Update shellcheck config.

--- a/.github/linters/.shellcheckrc
+++ b/.github/linters/.shellcheckrc
@@ -1,1 +1,5 @@
-source-path=src/
+external-sources=true
+source-path=src
+source-path=src/internals
+source-path=lib/biapy-bashlings/src/
+source-path=lib/biapy-bashlings/src/internals
