--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,9 +13,7 @@ jobs:
         with:
           submodules: 'true'
       - name: Install shellspec
-        uses: lyricwulf/abc@v1
-        with: 
-          macos: shellspec
+        run: brew tap 'shellspec/shellspec' && brew install 'shellspec'
       - name: Tests
         run: sudo --user='runner' make test  
   coverage:
@@ -25,8 +23,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - name: Setup shellspec
-        run: sudo apt-get update && sudo apt-get install -y 'shellspec' 'kcov'
+      - name: Install kcov
+        run: sudo apt-get update && sudo apt-get install -y 'kcov'
+      - name: Install shellspec
+        run: brew tap 'shellspec/shellspec' && brew install 'shellspec'
       - name: Tests & Coverage
         run: sudo --user='runner' --preserve-env='PATH' make coverage
       # - name: Codecov.io
