--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,12 +27,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y 'kcov'
       - name: Install homebrew
         run: NONINTERACTIVE=1 bash -c "$(command curl -fsSL 'https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh')"
-      - name: Load brew environment
-        run: echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> "${HOME}/.profile"
       - name: Install shellspec
-        run: brew tap 'shellspec/shellspec' && brew install 'shellspec'
+        run: /home/linuxbrew/.linuxbrew/bin/brew tap 'shellspec/shellspec' && /home/linuxbrew/.linuxbrew/bin/brew install 'shellspec'
       - name: Tests & Coverage
-        run: sudo --user='runner' --preserve-env='PATH' make coverage
+        run: PATH="/home/linuxbrew/.linuxbrew/bin:${PATH}" sudo --user='runner' --preserve-env='PATH' make coverage
       # - name: Codecov.io
       #   uses: codecov/codecov-action@v3
       #   with:
