--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/codecov-result.json
+          files: coverage/coverage.json,coverage/cobertura.xml
           flags: unittests
           name: bashembler
           fail_ci_if_error: false
