Remove trailing space.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Install shellspec
         run: brew tap 'shellspec/shellspec' && brew install 'shellspec'
       - name: Tests
-        run: sudo --user='runner' make test  
+        run: sudo --user='runner' make 'test'
   coverage:
     runs-on: 'ubuntu-latest'
     steps:
