--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,8 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 charset = utf-8
+indent_style = space
+indent_size = 2
 
 # Tab indentation (no size specified)
 [Makefile]
@@ -13,10 +15,7 @@ indent_style = tab
 indent_size = 4
 
 [*.bash]
-indent_style = space
-indent_size = 2
-
-shell_variant      = bash  
+shell_variant      = bash
 binary_next_line   = true  # binary ops like && and | may start a line.
 switch_case_indent = true  # switch cases will be indented.
 space_redirects    = true  # redirect operators will be followed by a space.
@@ -24,12 +23,8 @@ keep_padding       = true  # keep column alignment paddings
 function_next_line = false  # function opening braces are placed on a separate line
 never_split        = true  # like -ns
 
-
-[*.bats]
-indent_style = space
-indent_size = 2
-
-shell_variant      = bats  
+[*.sh]
+shell_variant      = shell
 binary_next_line   = true  # binary ops like && and | may start a line.
 switch_case_indent = true  # switch cases will be indented.
 space_redirects    = true  # redirect operators will be followed by a space.
@@ -39,10 +34,4 @@ never_split        = true  # like -ns
 
 # Ignore the entire "third_party" directory.
 [libs/**]
-ignore = true
-
-[test/bats/**]
-ignore = true
-
-[test/test_helper/bats-*/**]
 ignore = true
