--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   push:
     tags:
       - 'v*' # Push events to matching v* tag (e.g. v1.0, v20.15.10).
+env:
+  VERBOSE: 1
+  DEBUG: 0
 jobs:
   release:
     name: release
