--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create release asset
         run: |
           make build-clean
-          VERBOSE=1 make build
+          DEBUG=1 VERBOSE=1 make build
       - name: Generate asset SHA256
         id: sha256
         run: |
