--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,9 @@ jobs:
         run: |
           log_file="$(mktemp)"
           make build-clean
+          echo "::group::build log"
           VERBOSE=1 make build 2>&1
-          
+          echo "::endgroup::"
       # "${log_file}" || ( echo "::set-output name=errors::$(cat "${log_file}")" && false )
       # - name: Build error log
       #   if: ${{ failure() }}
