--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,21 +14,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
       - name: Create release asset
         id: build
         run: |
           log_file="$(mktemp)"
           make build-clean
-          echo "::group::build log"
-          VERBOSE=1 make build 2>&1
-          echo "::endgroup::"
-      # "${log_file}" || ( echo "::set-output name=errors::$(cat "${log_file}")" && false )
-      # - name: Build error log
-      #   if: ${{ failure() }}
-      #   run: |
-      #     echo "${{ steps.build.outputs.errors }}"
+          make build
       - name: Generate asset SHA256
         id: sha256
         run: |
