--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,8 @@ name: tests
 on:
   push:
     branches: [main]
+    tags:
+      - 'v*' # Push events to matching v* tag (e.g. v1.0, v20.15.10).
   pull_request:
     branches: [main]
 jobs:
