--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -13,6 +13,8 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
+    tags:
+      - 'v*' # Push events to matching v* tag (e.g. v1.0, v20.15.10).
   pull_request:
     branches: [main]
 
