--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,26 +14,27 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
+      - id: get-version
+        uses: battila7/get-version-action@v2
       - name: Create release asset
         id: build
         run: |
-          log_file="$(mktemp)"
           make build-clean
           make build
       - name: Generate asset SHA256
         id: sha256
         run: |
-          echo "::set-output name=bashembler::$(shasum -a 256 bin/bashembler | cut -d' ' -f1)"
+          echo "::set-output name=bashembler::$(shasum -a 256 'bin/bashembler' | cut -d' ' -f1)"
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ github.ref }}
-          name: Release ${{ github.ref }}
-          artifacts: "bin/bashembler"
+          name: Bashembler ${{ steps.get_version.outputs.version }}
+          artifacts: "bin/bashembler,bin/bashembler.sha512"
           body: |
             ---
             ### Assets
-            - Asset Url: https://github.com/biapy/bashembler/releases/download/${{ steps.commit.outputs.version }}/bashembler
+            - Asset Url: https://github.com/biapy/bashembler/releases/download/${{ steps.get_version.outputs.version }}/bashembler
             - SHA Checksum: `${{ steps.sha256.outputs.bashembler }}`
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
